[gd_scene load_steps=8 format=3 uid="uid://6dh4pra7fmdx"]

[ext_resource type="Texture2D" uid="uid://c43ysxjjje3gi" path="res://assets/Hospital.png" id="1_kn5dp"]
[ext_resource type="Script" path="res://cenas/Cena05_Boticario.gd" id="1_nsq5t"]
[ext_resource type="Texture2D" uid="uid://n31ee3805lok" path="res://assets/balao-fala.png" id="1_r4xao"]
[ext_resource type="Texture2D" uid="uid://dgc6ig6rtp3df" path="res://assets/boticario.png" id="3_51rc6"]
[ext_resource type="Texture2D" uid="uid://dox3rl6yvw1cx" path="res://assets/viajante.png" id="3_plmow"]
[ext_resource type="FontFile" uid="uid://djy146x3wurjd" path="res://fonts/Minecraftia-Regular.ttf" id="6_5vgdy"]
[ext_resource type="AudioStream" uid="uid://ccssau3bp3d82" path="res://assets/music/musica-medieval.mp3" id="6_6miii"]

[node name="Cena05_Boticario" type="Node2D"]
script = ExtResource("1_nsq5t")

[node name="FarmaciaCenario" type="Sprite2D" parent="."]
position = Vector2(468, 228)
scale = Vector2(3.888, 3.47)
texture = ExtResource("1_kn5dp")

[node name="ViajanteSprite" type="Sprite2D" parent="."]
position = Vector2(185, 541)
scale = Vector2(0.388898, 0.382688)
texture = ExtResource("3_plmow")

[node name="BoticarioSprite" type="Sprite2D" parent="."]
position = Vector2(811, 593)
scale = Vector2(1.00123, 0.956699)
texture = ExtResource("3_51rc6")

[node name="UIScript" type="CanvasLayer" parent="."]

[node name="BalaoFala" type="TextureRect" parent="UIScript"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -389.0
offset_top = -234.0
offset_right = 323.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_r4xao")

[node name="NomePersonagemLabel" type="Label" parent="UIScript/BalaoFala"]
layout_mode = 0
offset_left = 376.0
offset_top = -18.0
offset_right = 421.0
offset_bottom = 5.0
theme_override_fonts/font = ExtResource("6_5vgdy")
horizontal_alignment = 1

[node name="TextoDialogoLabel" type="RichTextLabel" parent="UIScript/BalaoFala"]
layout_mode = 0
offset_left = 102.0
offset_top = 46.0
offset_right = 628.0
offset_bottom = 159.0
theme_override_fonts/normal_font = ExtResource("6_5vgdy")

[node name="AvancarButton" type="Button" parent="UIScript/BalaoFala"]
layout_mode = 0
offset_left = 574.0
offset_top = 191.0
offset_right = 645.0
offset_bottom = 222.0
text = "Avan√ßar"

[node name="FadeEfeito" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AmbiencePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6miii")
autoplay = true
